<?xml version="1.0" encoding="utf-8"?>
<!-- The layout used for the preferences information -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_max_amount_default"
        android:inputType="number"
        android:key="@string/settings_max_amount_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_amount_label"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label"/>

    <EditTextPreference
        android:defaultValue="@string/settings_customize_feed_default"
        android:inputType="text"
        android:key="@string/settings_customize_feed_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_customize_feed_label"/>
</PreferenceScreen>